fix: 隐藏`去书架查看`按钮

--- a/src-tauri/inject/style.css
+++ b/src-tauri/inject/style.css
@@ -63,7 +63,8 @@ html body.wr_whiteTheme,
 /* 隐藏元素 */
 .readerMemberCardTips,
 .readerControls_item.download ,/* 下载App按钮 */
-.readerControls_item.wetype /* 微信输入法 */ {
+.readerControls_item.wetype /* 微信输入法 */,
+.readerTopBar_addToShelf_wrapper /* 去书架查看 */ {
   display: none !important;
 }
 
